styling improvements to make the insert image listview view look less broken, adjust size of internallinkcontainer so that the last entry on the listview list can be selected (footer div would overlap would prevent that).

--- a/Products/TinyMCE/skins/tinymce/plugins/plonebrowser/css/plonebrowser.css
+++ b/Products/TinyMCE/skins/tinymce/plugins/plonebrowser/css/plonebrowser.css
@@ -29,7 +29,7 @@
 #description { border: 1px solid #CCC; }
 #uploadbutton { margin-top: 10px; }
 #previewimagecontainer { text-align: center; }
-#internallinkcontainer { width: 100%; height: 370px; position: relative; }
+#internallinkcontainer { width: 100%; height: 350px; position: relative; }
 #internallinkcontainer div.item:hover { cursor: pointer; background-color: #EEE; }
 #internallinkcontainer .thumbnail.folderish a { color: #000; border: none!important; display: block; text-align: center; }
 #internallinkcontainer .list span { margin-left: 0.5em; }
@@ -82,4 +82,7 @@ input[disabled] { background: #F6F6F6; border: 1px solid #E6E6E6; color: #B2C3D9
 #previewexternalurl { display: block; padding-left: 20px; border: none!important; }
 #previewexternal { display: none; }
 
-.contenttype-image { line-height: 2em; padding-left: 20px !important; background: url("contenttypes-sprite.png") no-repeat scroll 0 -860px transparent;}
+#plonebrowser .contenttype-image { line-height: 1.5em; padding-left: 20px !important; background: url("contenttypes-sprite.png") no-repeat scroll 0 -864px transparent;}
+
+#plonebrowser .contenttype-folder,
+#plonebrowser .folderlink { line-height: 1.5em; padding-left: 20px !important; background: url("contenttypes-sprite.png") no-repeat 0 -650px transparent;}
